# UBB-Projects

./: README.md
Semester 1/Computational Logic/Seminars/: Boolean-Functions_Ex3.8_Modolea Bogdan.pptx  Predicate Logic_Ex5.4_Modolea.pptx
Semester 1/Computer Systems Architecture/Practic/: test.asm
Semester 2/: Useful links.txt
Semester 2/Data Structures and Algorithms/Lab 1 - 8/: ExtendedTest.cpp  ShortTest.cpp  SortedBag.cpp  SortedBag.h  SortedBagIterator.cpp  SortedBagIterator.h
Semester 2/Data Structures and Algorithms/Lab 2 - 8/: ExtendedTest.cpp  ShortTest.cpp  SortedSet.cpp  SortedSet.h  SortedSetIterator.cpp  SortedSetIterator.h
Semester 2/Data Structures and Algorithms/Lab 3 - 14/: ExtendedTest.cpp  MultiMap.cpp  MultiMap.h  MultiMapIterator.cpp  MultiMapIterator.h  ShortTest.cpp
Semester 2/Data Structures and Algorithms/Lab 4 - 31/: App.cpp  ExtendedTest.cpp  MultiMap.cpp  MultiMap.h  MultiMapIterator.cpp  MultiMapIterator.h
Semester 2/Data Structures and Algorithms/Lab 5 - 7/: ExtendedTest.cpp  ShortTest.cpp  SortedSet.cpp  SortedSet.h  SortedSetIterator.cpp  SortedSetIterator.h
Semester 2/Dynamical Systems/: Untitled.ipynb  Untitled1.ipynb  Untitled10.ipynb  Untitled2.ipynb  Untitled3.ipynb  Untitled4.ipynb  Untitled5.ipynb  Untitled6.ipynb  Untitled7.ipynb  Untitled8.ipynb  Untitled9.ipynb
Semester 2/Graph Algorithms/Lab 2/: directed_graph.cpp  directed_graph.h  main.cpp  undirected_graph.cpp
Semester 2/Graph Algorithms/Lab 3/: directed_graph.cpp  main.cpp
Semester 2/Graph Algorithms/Lab 4/: main.cpp
Semester 2/Graph Algorithms/Lab 5/: directed_graph.cpp  directed_graph.h  main.cpp  (+1 more)
Semester 2/Object Oriented Programming/a13-914-Modolea-Bogdan-1/: Action.cpp  Action.h  CMakeLists.txt  Domain.cpp  Domain.h  FileRepository.cpp  FileRepository.h  GUI.cpp  GUI.h  MyListTableModel.cpp  MyListTableModel.h  MyListWidget.cpp  MyListWidget.h  Repository.cpp  Repository.h  SavedMovies.cpp  SavedMovies.h  Service.cpp  Service.h  UI.cpp  UI.h  Validators.cpp  Validators.h  Watchlist.cpp  Watchlist.h  main.cpp
Semester 2/Object Oriented Programming/t1-914-Modolea-Bogdan-1/: CMakeLists.txt  Domain.cpp  Domain.h  DynamicArray.h  Repository.cpp  Repository.h  Service.cpp  Service.h  Tests.cpp  Tests.h  UI.cpp  UI.h  main.cpp
Semester 2/Object Oriented Programming/t2-914-Modolea-Bogdan-1/: Appliance.cpp  Appliance.h  CMakeLists.txt  DishWasher.cpp  DishWasher.h  Refrigerator.cpp  Refrigerator.h  Service.cpp  Service.h  UI.cpp  UI.h  main.cpp
Semester 2/Object Oriented Programming/t3-914-Modolea-Bogdan/: CMakeLists.txt  Domain.cpp  Domain.h  GUI.cpp  GUI.h  Service.cpp  Service.h  main.cpp
(+1095 files in other folders)
