cmake_minimum_required(VERSION 3.21)
project(t1_914_Modolea_Bogdan_1)

set(CMAKE_CXX_STANDARD 14)

add_executable(t1_914_Modolea_Bogdan_1
        main.cpp
        Tests.cpp
        Tests.h
        UI.cpp
        UI.h
        Service.cpp
        Service.h
        Repository.cpp
        Repository.h
        Domain.cpp
        Domain.h
        DynamicArray.h)
